[gd_scene load_steps=28 format=3 uid="uid://dx8au8yvqlmc4"]

[ext_resource type="PackedScene" uid="uid://c4j2rq72au0et" path="res://scenes/cleito.tscn" id="1_608d1"]
[ext_resource type="Script" path="res://testmap_vand.gd" id="1_eh2dw"]
[ext_resource type="Texture2D" uid="uid://ml8hx7qo5htq" path="res://assets/grama2.png" id="2_5amwg"]
[ext_resource type="PackedScene" uid="uid://b058s0t0t647l" path="res://scenes/undo.tscn" id="2_5ink7"]
[ext_resource type="PackedScene" uid="uid://cqmn6o8m6h40k" path="res://scenes/perry.tscn" id="2_eavri"]
[ext_resource type="Texture2D" uid="uid://dgqxxihv1liga" path="res://assets/New Piskel.png" id="2_km5ta"]
[ext_resource type="PackedScene" uid="uid://pbapmo7fugu5" path="res://scenes/button.tscn" id="3_cadbo"]
[ext_resource type="Texture2D" uid="uid://dsgk8k5myywt6" path="res://tile_grid_m.png" id="3_jutpt"]
[ext_resource type="Texture2D" uid="uid://ccmmcqosqq2v7" path="res://assets/New Piskel-1.png.png" id="5_68h26"]
[ext_resource type="PackedScene" uid="uid://d4fbnxtp3iyoi" path="res://scenes/mist.tscn" id="7_8ph0u"]
[ext_resource type="Texture2D" uid="uid://bj5oxjthvv37s" path="res://assets/nevoa2.png" id="7_y70u8"]
[ext_resource type="Texture2D" uid="uid://b0xe8fghbqjrk" path="res://assets/galhos.png" id="10_4iwyx"]
[ext_resource type="PackedScene" uid="uid://m5yp52deh0eo" path="res://scenes/tile.tscn" id="12_wvv62"]
[ext_resource type="Texture2D" uid="uid://rlj0syyxkh4d" path="res://assets/New Piskel-1.png (1).png" id="13_dlc2g"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_qhr6q"]
texture = ExtResource("2_5amwg")
0:0/0 = 0
1:0/0 = 0
2:0/0 = 0
3:0/0 = 0
0:1/0 = 0
1:1/0 = 0
2:1/0 = 0
3:1/0 = 0
0:2/0 = 0
1:2/0 = 0
2:2/0 = 0
3:2/0 = 0
0:3/0 = 0
1:3/0 = 0
2:3/0 = 0
3:3/0 = 0

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_uxn8q"]
texture = ExtResource("2_km5ta")
0:0/0 = 0
1:0/0 = 0
2:0/0 = 0
3:0/0 = 0
4:0/0 = 0
5:0/0 = 0
6:0/0 = 0
7:0/0 = 0
0:1/0 = 0
1:1/0 = 0
2:1/0 = 0
3:1/0 = 0
4:1/0 = 0
5:1/0 = 0
6:1/0 = 0
7:1/0 = 0
0:2/0 = 0
1:2/0 = 0
2:2/0 = 0
3:2/0 = 0
4:2/0 = 0
5:2/0 = 0
6:2/0 = 0
7:2/0 = 0
0:3/0 = 0
1:3/0 = 0
2:3/0 = 0
3:3/0 = 0
4:3/0 = 0
5:3/0 = 0
6:3/0 = 0
7:3/0 = 0
0:4/0 = 0
1:4/0 = 0
2:4/0 = 0
3:4/0 = 0
4:4/0 = 0
5:4/0 = 0
6:4/0 = 0
7:4/0 = 0
0:5/0 = 0
1:5/0 = 0
2:5/0 = 0
3:5/0 = 0
4:5/0 = 0
5:5/0 = 0
6:5/0 = 0
7:5/0 = 0
0:6/0 = 0
1:6/0 = 0
2:6/0 = 0
3:6/0 = 0
4:6/0 = 0
5:6/0 = 0
6:6/0 = 0
7:6/0 = 0
0:7/0 = 0
1:7/0 = 0
2:7/0 = 0
3:7/0 = 0
4:7/0 = 0
5:7/0 = 0
6:7/0 = 0
7:7/0 = 0

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_7dmqi"]
texture = ExtResource("3_jutpt")

[sub_resource type="TileSet" id="TileSet_n7iwx"]
sources/1 = SubResource("TileSetAtlasSource_qhr6q")
sources/8 = SubResource("TileSetAtlasSource_7dmqi")
sources/2 = SubResource("TileSetAtlasSource_uxn8q")

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_k5bh4"]
texture = ExtResource("5_68h26")
0:0/0 = 0
1:0/0 = 0
2:0/0 = 0
3:0/0 = 0
4:0/0 = 0
5:0/0 = 0
6:0/0 = 0
7:0/0 = 0
0:1/0 = 0
1:1/0 = 0
2:1/0 = 0
3:1/0 = 0
4:1/0 = 0
5:1/0 = 0
6:1/0 = 0
7:1/0 = 0
0:2/0 = 0
1:2/0 = 0
2:2/0 = 0
3:2/0 = 0
4:2/0 = 0
5:2/0 = 0
6:2/0 = 0
7:2/0 = 0
0:3/0 = 0
1:3/0 = 0
2:3/0 = 0
3:3/0 = 0
4:3/0 = 0
5:3/0 = 0
6:3/0 = 0
7:3/0 = 0
0:4/0 = 0
1:4/0 = 0
2:4/0 = 0
3:4/0 = 0
4:4/0 = 0
5:4/0 = 0
6:4/0 = 0
7:4/0 = 0
0:5/0 = 0
1:5/0 = 0
2:5/0 = 0
3:5/0 = 0
4:5/0 = 0
5:5/0 = 0
6:5/0 = 0
7:5/0 = 0
0:6/0 = 0
1:6/0 = 0
2:6/0 = 0
3:6/0 = 0
4:6/0 = 0
5:6/0 = 0
6:6/0 = 0
7:6/0 = 0
0:7/0 = 0
1:7/0 = 0
2:7/0 = 0
3:7/0 = 0
4:7/0 = 0
5:7/0 = 0
6:7/0 = 0
7:7/0 = 0

[sub_resource type="TileSet" id="TileSet_n2vb7"]
sources/0 = SubResource("TileSetAtlasSource_k5bh4")

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_6gkla"]
texture = ExtResource("7_y70u8")
0:0/0 = 0
1:0/0 = 0
2:0/0 = 0
3:0/0 = 0
0:1/0 = 0
1:1/0 = 0
2:1/0 = 0
3:1/0 = 0
0:2/0 = 0
1:2/0 = 0
2:2/0 = 0
3:2/0 = 0
0:3/0 = 0
1:3/0 = 0
2:3/0 = 0
3:3/0 = 0

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_kfj5a"]
texture = ExtResource("13_dlc2g")
0:0/0 = 0
1:0/0 = 0
2:0/0 = 0
3:0/0 = 0
4:0/0 = 0
5:0/0 = 0
6:0/0 = 0
7:0/0 = 0
0:1/0 = 0
1:1/0 = 0
2:1/0 = 0
3:1/0 = 0
4:1/0 = 0
5:1/0 = 0
6:1/0 = 0
7:1/0 = 0
0:2/0 = 0
1:2/0 = 0
2:2/0 = 0
3:2/0 = 0
4:2/0 = 0
5:2/0 = 0
6:2/0 = 0
7:2/0 = 0
0:3/0 = 0
1:3/0 = 0
2:3/0 = 0
3:3/0 = 0
4:3/0 = 0
5:3/0 = 0
6:3/0 = 0
7:3/0 = 0
0:4/0 = 0
1:4/0 = 0
2:4/0 = 0
3:4/0 = 0
4:4/0 = 0
5:4/0 = 0
6:4/0 = 0
7:4/0 = 0
0:5/0 = 0
1:5/0 = 0
2:5/0 = 0
3:5/0 = 0
4:5/0 = 0
5:5/0 = 0
6:5/0 = 0
7:5/0 = 0
0:6/0 = 0
1:6/0 = 0
2:6/0 = 0
3:6/0 = 0
4:6/0 = 0
5:6/0 = 0
6:6/0 = 0
7:6/0 = 0
0:7/0 = 0
1:7/0 = 0
2:7/0 = 0
3:7/0 = 0
4:7/0 = 0
5:7/0 = 0
6:7/0 = 0
7:7/0 = 0

[sub_resource type="TileSet" id="TileSet_fd3jk"]
sources/0 = SubResource("TileSetAtlasSource_6gkla")
sources/1 = SubResource("TileSetAtlasSource_kfj5a")

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_c35fx"]
texture = ExtResource("7_y70u8")
0:0/0 = 0
1:0/0 = 0
2:0/0 = 0
3:0/0 = 0
0:1/0 = 0
1:1/0 = 0
2:1/0 = 0
3:1/0 = 0
0:2/0 = 0
1:2/0 = 0
2:2/0 = 0
3:2/0 = 0
0:3/0 = 0
1:3/0 = 0
2:3/0 = 0
3:3/0 = 0

[sub_resource type="TileSet" id="TileSet_peh2v"]
sources/0 = SubResource("TileSetAtlasSource_c35fx")

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_wx8oa"]
texture = ExtResource("7_y70u8")
0:0/0 = 0
1:0/0 = 0
2:0/0 = 0
3:0/0 = 0
0:1/0 = 0
1:1/0 = 0
2:1/0 = 0
3:1/0 = 0
0:2/0 = 0
1:2/0 = 0
2:2/0 = 0
3:2/0 = 0
0:3/0 = 0
1:3/0 = 0
2:3/0 = 0
3:3/0 = 0

[sub_resource type="TileSet" id="TileSet_fcx8a"]
sources/1 = SubResource("TileSetAtlasSource_wx8oa")

[node name="testmap_vand" type="Node2D"]
script = ExtResource("1_eh2dw")

[node name="TileMap" type="TileMap" parent="."]
unique_name_in_owner = true
tile_set = SubResource("TileSet_n7iwx")
format = 2
layer_0/name = "0"
layer_0/tile_data = PackedInt32Array(-65537, 65537, 2, -1, 65537, 3, 65535, 1, 2, 131071, 1, 3, 196607, 1, 0, 262143, 1, 1, 327679, 1, 2, 393215, 1, 3, -131072, 131073, 2, -65536, 131073, 3, 0, 65537, 2, 65536, 65537, 3, 131072, 65537, 0, 196608, 65537, 1, 262144, 65537, 2, 327680, 1, 0, -131071, 196609, 2, -65535, 196609, 3, 1, 131073, 2, 65537, 131073, 3, 131073, 131073, 0, 196609, 131073, 1, 262145, 131073, 2, 327681, 1, 0, -131070, 1, 2, -65534, 1, 3, 2, 196609, 2, 65538, 196609, 3, 131074, 196609, 0, 196610, 196609, 1, 262146, 196609, 2, 327682, 65537, 0, -131069, 65537, 2, -65533, 65537, 3, 3, 1, 2, 65539, 1, 3, 131075, 1, 0, 196611, 1, 1, 262147, 1, 2, 327683, 131073, 0, -131068, 131073, 2, -65532, 131073, 3, 4, 65537, 2, 65540, 65537, 3, 131076, 65537, 0, 196612, 65537, 1, 262148, 65537, 2, 327684, 196609, 0, -131067, 196609, 2, -65531, 196609, 3, 5, 131073, 2, 65541, 131073, 3, 131077, 131073, 0, 196613, 131073, 1, 262149, 131073, 2, 327685, 131073, 3, -131066, 1, 2, -65530, 1, 3, 6, 1, 0, 65542, 1, 1, 131078, 1, 2, 196614, 1, 3, 262150, 1, 0, 327686, 1, 1, 196603, 196609, 1, 262139, 196609, 2, 327675, 196609, 3, 393211, 196609, 0, 196604, 196609, 0, 262140, 196609, 1, 327676, 196609, 2, 393212, 196609, 3, 196605, 196609, 1, 262141, 196609, 2, 327677, 196609, 3, 393213, 196609, 0, 196606, 196609, 0, 262142, 196609, 1, 327678, 196609, 2, 393214, 196609, 3, -65541, 196609, 1, -5, 196609, 2, 65531, 196609, 3, 131067, 196609, 0, -65540, 131073, 2, -4, 131073, 3, 65532, 131073, 3, 131068, 131073, 0, -65539, 196609, 2, -3, 196609, 3, 65533, 196609, 3, 131069, 196609, 0, -65538, 1, 2, -2, 1, 3, 65534, 196609, 2, 131070, 196609, 3, 393210, 131073, 0, 458746, 131073, 1, 524282, 131073, 0, 589818, 131073, 1, 458747, 196609, 1, 524283, 196609, 0, 589819, 196609, 1, 458748, 196609, 0, 524284, 196609, 1, 589820, 196609, 2, 458749, 131073, 0, 524285, 196609, 2, 589821, 196609, 0, 131066, 131073, 0, 196602, 131073, 1, 262138, 131073, 2, 327674, 131073, 3, -131078, 131073, 0, -65542, 131073, 1, -6, 131073, 2, 65530, 131073, 3, -131077, 196609, 0, -131076, 1, 3, -131075, 65537, 3, 458750, 196609, 0, 458751, 65537, 0, 393216, 1, 1, 393217, 1, 1, 393218, 65537, 1, 393219, 131073, 1, 524286, 131073, 1, 524287, 131073, 1, 458752, 1, 2, 458753, 1, 2, 458754, 65537, 2, 458755, 131073, 2, 655354, 131073, 2, 720890, 131073, 3, 786426, 131073, 0, 655355, 196609, 2, 720891, 196609, 3, 786427, 196609, 0, 655356, 196609, 3, 720892, 196609, 0, 786428, 196609, 1, 655357, 196609, 1, 720893, 1, 0, 786429, 1, 1, 589822, 1, 0, 655358, 1, 1, 720894, 65537, 0, 786430, 65537, 1, 589823, 65537, 0, 655359, 65537, 1, 720895, 131073, 0, 786431, 131073, 1, 524288, 1, 3, 589824, 131073, 1, 655360, 196609, 0, 720896, 196609, 1, 524289, 1, 3, 589825, 196609, 1, 655361, 1, 0, 720897, 1, 1, 524290, 65537, 3, 589826, 1, 1, 655362, 65537, 0, 720898, 65537, 1, 524291, 131073, 3, 589827, 65537, 1, 655363, 131073, 0, 720899, 131073, 1, 524292, 196609, 3, 589828, 131073, 1, 655364, 196609, 0, 720900, 196609, 1, 524293, 196609, 0, 589829, 196609, 1, 655365, 1, 0, 720901, 1, 1, 524294, 1, 0, 589830, 1, 1, 655366, 65537, 0, 720902, 65537, 1, 524295, 65537, 0, 589831, 65537, 1, 655367, 131073, 0, 720903, 131073, 1, 524296, 131073, 0, 589832, 131073, 1, 655368, 196609, 0, 720904, 196609, 1, 524297, 196609, 0, 589833, 196609, 1, 655369, 1, 0, 720905, 1, 1, 524298, 1, 0, 589834, 1, 1, 655370, 65537, 0, 720906, 65537, 1, 524299, 65537, 0, 589835, 65537, 1, 655371, 131073, 0, 720907, 131073, 1, 524300, 131073, 0, 589836, 131073, 1, 655372, 196609, 0, 720908, 196609, 1, 524301, 1, 2, 589837, 1, 3, 655373, 1, 0, 720909, 1, 1, 262154, 1, 0, 327690, 1, 1, 393226, 1, 2, 458762, 1, 3, 262155, 65537, 0, 327691, 65537, 1, 393227, 65537, 2, 458763, 65537, 3, 262156, 1, 2, 327692, 1, 3, 393228, 131073, 2, 458764, 131073, 3, 262157, 1, 2, 327693, 1, 3, 393229, 1, 0, 458765, 1, 1, 10, 1, 0, 65546, 1, 1, 131082, 1, 2, 196618, 1, 3, 11, 65537, 0, 65547, 65537, 1, 131083, 65537, 2, 196619, 65537, 3, 12, 1, 2, 65548, 1, 3, 131084, 1, 0, 196620, 1, 1, 13, 65537, 2, 65549, 65537, 3, 131085, 1, 0, 196621, 1, 1, 393222, 1, 2, 458758, 1, 3, 262151, 65537, 0, 327687, 65537, 1, 393223, 65537, 2, 458759, 65537, 3, 262152, 131073, 0, 327688, 131073, 1, 393224, 131073, 2, 458760, 131073, 3, 262153, 196609, 0, 327689, 196609, 1, 393225, 196609, 2, 458761, 196609, 3, 7, 65537, 0, 65543, 65537, 1, 131079, 65537, 2, 196615, 65537, 3, 8, 131073, 0, 65544, 131073, 1, 131080, 131073, 2, 196616, 131073, 3, 9, 196609, 0, 65545, 196609, 1, 131081, 196609, 2, 196617, 196609, 3, -262138, 131073, 2, -196602, 131073, 3, -262137, 196609, 2, -196601, 196609, 3, -131065, 65537, 2, -65529, 65537, 3, -262136, 1, 2, -196600, 1, 3, -131064, 131073, 2, -65528, 131073, 3, -262135, 65537, 2, -196599, 65537, 3, -131063, 196609, 2, -65527, 196609, 3, -262134, 131073, 2, -196598, 131073, 3, -131062, 1, 2, -65526, 1, 3, -262133, 196609, 2, -196597, 196609, 3, -131061, 65537, 2, -65525, 65537, 3, -262132, 1, 2, -196596, 1, 3, -131060, 1, 0, -65524, 1, 1, -262131, 65537, 2, -196595, 65537, 3, -131059, 65537, 0, -65523, 65537, 1, -262142, 131073, 2, -196606, 131073, 3, -262141, 196609, 2, -196605, 196609, 3, -262140, 1, 2, -196604, 1, 3, -262139, 65537, 2, -196603, 65537, 3, -196610, 131073, 2, -131074, 131073, 3, -196609, 196609, 2, -131073, 196609, 3, -262144, 1, 2, -196608, 1, 3, -262143, 65537, 2, -196607, 65537, 3, -196614, 131073, 2, -196613, 196609, 2, -196612, 1, 2, -196611, 65537, 2, -327688, 1, 0, -262152, 1, 1, -196616, 1, 2, -131080, 1, 0, -327687, 65537, 0, -262151, 65537, 1, -196615, 65537, 2, -131079, 65537, 0, -327686, 131073, 0, -262150, 131073, 1, -327685, 196609, 0, -262149, 196609, 1, -327684, 1, 0, -262148, 1, 1, -327683, 65537, 0, -262147, 65537, 1, -327682, 131073, 0, -262146, 131073, 1, -327681, 196609, 0, -262145, 196609, 1, -393216, 1, 0, -327680, 1, 1, -393215, 65537, 0, -327679, 65537, 1, -393214, 131073, 0, -327678, 131073, 1, -393213, 196609, 0, -327677, 196609, 1, -393212, 1, 0, -327676, 1, 1, -393211, 65537, 0, -327675, 65537, 1, -393210, 131073, 0, -327674, 131073, 1, -393209, 196609, 0, -327673, 196609, 1, -393208, 1, 0, -327672, 1, 1, -393207, 65537, 0, -327671, 65537, 1, -393206, 131073, 0, -327670, 131073, 1, -393205, 196609, 0, -327669, 196609, 1, -393204, 1, 0, -327668, 1, 1, -393203, 65537, 0, -327667, 65537, 1, -393202, 131073, 0, -327666, 131073, 1, -262130, 131073, 2, -196594, 131073, 3, -393201, 196609, 0, -327665, 196609, 1, -262129, 196609, 2, -196593, 196609, 3, -131058, 131073, 0, -65522, 131073, 1, 14, 131073, 2, 65550, 131073, 3, -131057, 196609, 0, -65521, 196609, 1, 15, 196609, 2, 65551, 196609, 3, 131086, 65537, 0, 196622, 65537, 1, 262158, 65537, 2, 327694, 65537, 3, 131087, 131073, 0, 196623, 131073, 1, 262159, 131073, 2, 327695, 131073, 3, 131088, 196609, 0, 196624, 196609, 1, 262160, 196609, 2, 327696, 196609, 3, 393230, 65537, 0, 458766, 65537, 1, 524302, 65537, 2, 589838, 65537, 3, 393231, 131073, 0, 458767, 131073, 1, 524303, 131073, 2, 589839, 131073, 3, 393232, 196609, 0, 458768, 196609, 1, 524304, 196609, 2, 589840, 196609, 3, 786445, 1, 2, 851981, 1, 3, 655374, 65537, 0, 720910, 65537, 1, 786446, 65537, 2, 851982, 65537, 3, 655375, 131073, 0, 720911, 131073, 1, 786447, 131073, 2, 851983, 131073, 3, 655376, 196609, 0, 720912, 196609, 1, 786448, 196609, 2, 851984, 196609, 3, 786441, 1, 2, 851977, 1, 3, 786442, 65537, 2, 851978, 65537, 3, 786443, 131073, 2, 851979, 131073, 3, 786444, 196609, 2, 851980, 196609, 3, 786437, 1, 2, 851973, 1, 3, 786438, 65537, 2, 851974, 65537, 3, 786439, 131073, 2, 851975, 131073, 3, 786440, 196609, 2, 851976, 196609, 3, 786433, 1, 2, 851969, 1, 3, 786434, 65537, 2, 851970, 65537, 3, 786435, 131073, 2, 851971, 131073, 3, 786436, 196609, 2, 851972, 196609, 3, 851965, 1, 2, 917501, 1, 3, 851966, 65537, 2, 917502, 65537, 3, 851967, 131073, 2, 917503, 131073, 3, 786432, 196609, 2, 851968, 196609, 3, 720889, 65537, 3, 786425, 65537, 0, 851961, 65537, 1, 917497, 65537, 2, 851962, 131073, 1, 917498, 131073, 2, 851963, 196609, 1, 917499, 196609, 2, 851964, 196609, 2, 917500, 196609, 3, 458745, 65537, 1, 524281, 65537, 0, 589817, 65537, 1, 655353, 65537, 2, 196601, 65537, 1, 262137, 65537, 2, 327673, 65537, 3, 393209, 65537, 0, 131064, 1, 0, 196600, 1, 1, 262136, 1, 2, 327672, 1, 3, 131065, 65537, 0, -65544, 1, 1, -8, 1, 2, 65528, 1, 3, -65543, 65537, 1, -7, 65537, 2, 65529, 65537, 3, 393208, 1, 0, 458744, 1, 1, 524280, 1, 0, 589816, 1, 1, 655352, 1, 2, 720888, 1, 3, 786424, 1, 0, 851960, 1, 1, 917496, 1, 2, 393220, 196609, 1, 458756, 196609, 2, 458757, 65537, 1, 393221, 65537, 1)
layer_1/name = "1"
layer_1/enabled = true
layer_1/modulate = Color(0.333333, 0.0313726, 0, 0.396078)
layer_1/y_sort_enabled = false
layer_1/y_sort_origin = 0
layer_1/z_index = 0
layer_1/tile_data = PackedInt32Array(262148, 8, 0, 262149, 8, 0, 196613, 8, 0, 196612, 8, 0, 196611, 8, 0, 262147, 8, 0, 327683, 8, 0, 327684, 8, 0, 327685, 8, 0, 327686, 8, 0, 262150, 8, 0, 196614, 8, 0, 196608, 8, 0)

[node name="StaticBody2D" parent="TileMap" instance=ExtResource("12_wvv62")]
position = Vector2(40, 56)

[node name="Perry" parent="." instance=ExtResource("2_eavri")]
position = Vector2(8, 56)

[node name="river" type="TileMap" parent="."]
tile_set = SubResource("TileSet_n2vb7")
format = 2
layer_0/tile_data = PackedInt32Array(196605, 262144, 4, 262141, 262144, 4, 327677, 262144, 4, 393213, 262144, 4, 458749, 262144, 4, 131070, 0, 1, 458751, 65536, 3, 393217, 65536, 3, 393219, 65536, 3, 393220, 196608, 5, 524289, 196608, 5, 524288, 196608, 5, 589823, 196608, 5, 589822, 196608, 5, 589821, 196608, 5, 524292, 196608, 5, 524290, 131072, 2, 655355, 65536, 1, 589819, 65536, 1, 196603, 65536, 1, 393221, 458752, 6, 524293, 458752, 6)

[node name="Node_5" type="Node2D" parent="."]

[node name="mist_5" type="TileMap" parent="Node_5"]
tile_set = SubResource("TileSet_fd3jk")
format = 2
layer_0/tile_data = PackedInt32Array(655365, 0, 0, 720901, 0, 1, 786437, 0, 2, 851973, 0, 3, 655366, 65536, 0, 720902, 65536, 1, 786438, 65536, 2, 851974, 65536, 3, 655367, 0, 0, 720903, 0, 1, 786439, 0, 2, 851975, 0, 3, 655368, 65536, 0, 720904, 65536, 1, 786440, 65536, 2, 851976, 65536, 3, 655361, 0, 0, 720897, 0, 1, 786433, 0, 2, 851969, 0, 3, 655362, 65536, 0, 720898, 65536, 1, 786434, 65536, 2, 851970, 65536, 3, 655363, 131072, 0, 720899, 131072, 1, 786435, 131072, 2, 851971, 131072, 3, 655364, 196608, 0, 720900, 196608, 1, 786436, 196608, 2, 851972, 196608, 3, 720893, 0, 0, 786429, 0, 1, 851965, 0, 2, 917501, 0, 3, 720894, 65536, 0, 786430, 65536, 1, 851966, 65536, 2, 917502, 65536, 3, 720895, 131072, 0, 786431, 131072, 1, 851967, 131072, 2, 917503, 131072, 3, 655360, 196608, 0, 720896, 196608, 1, 786432, 196608, 2, 851968, 196608, 3, 720889, 0, 0, 786425, 0, 1, 851961, 0, 2, 917497, 0, 3, 720890, 65536, 0, 786426, 65536, 1, 851962, 65536, 2, 917498, 65536, 3, 720891, 131072, 0, 786427, 131072, 1, 851963, 131072, 2, 917499, 131072, 3, 720892, 196608, 0, 786428, 196608, 1, 851964, 196608, 2, 917500, 196608, 3, 720885, 0, 0, 786421, 0, 1, 851957, 0, 2, 917493, 0, 3, 720886, 65536, 0, 786422, 65536, 1, 851958, 65536, 2, 917494, 65536, 3, 720887, 131072, 0, 786423, 131072, 1, 851959, 131072, 2, 917495, 131072, 3, 720888, 196608, 0, 786424, 196608, 1, 851960, 196608, 2, 917496, 196608, 3, 458744, 0, 0, 524280, 0, 1, 589816, 0, 2, 655352, 0, 3, 458745, 65536, 0, 524281, 65536, 1, 589817, 65536, 2, 655353, 65536, 3, 458746, 131072, 0, 524282, 131072, 1, 589818, 131072, 2, 196600, 0, 0, 262136, 0, 1, 327672, 0, 2, 393208, 0, 3, 196601, 65536, 0, 262137, 65536, 1, 327673, 65536, 2, 393209, 65536, 3, 196602, 131072, 0, 262138, 131072, 1, 327674, 131072, 2, 393210, 131072, 3, -65544, 0, 0, -8, 0, 1, 65528, 0, 2, 131064, 0, 3, -65543, 65536, 0, -7, 65536, 1, 65529, 65536, 2, 131065, 65536, 3, -65542, 131072, 0, -6, 131072, 1, 65530, 131072, 2, 131066, 131072, 3, -65541, 196608, 0, -327688, 0, 0, -262152, 0, 1, -196616, 0, 2, -131080, 0, 3, -327687, 65536, 0, -262151, 65536, 1, -196615, 65536, 2, -131079, 65536, 3, -327686, 131072, 0, -262150, 131072, 1, -196614, 131072, 2, -131078, 131072, 3, -327685, 196608, 0, -262149, 196608, 1, -196613, 196608, 2, -131077, 196608, 3, -327684, 0, 0, -262148, 0, 0, -196612, 0, 1, -131076, 0, 2, -327683, 65536, 0, -262147, 65536, 0, -196611, 65536, 1, -131075, 65536, 2, -327682, 131072, 0, -262146, 131072, 0, -196610, 131072, 1, -131074, 131072, 2, -327681, 196608, 0, -262145, 196608, 0, -196609, 196608, 1, -131073, 196608, 2, -65540, 0, 3, -65539, 65536, 3, -65538, 131072, 3, -65537, 196608, 3, -327680, 0, 0, -262144, 0, 1, -196608, 0, 2, -131072, 0, 3, -327679, 65536, 0, -262143, 65536, 1, -196607, 65536, 2, -131071, 65536, 3, -327678, 131072, 0, -262142, 131072, 1, -196606, 131072, 2, -131070, 131072, 3, -327677, 196608, 0, -262141, 196608, 1, -196605, 196608, 2, -131069, 196608, 3, -327676, 0, 0, -262140, 0, 1, -196604, 0, 2, -131068, 0, 3, -327675, 65536, 0, -262139, 65536, 1, -196603, 65536, 2, -131067, 65536, 3, -327674, 131072, 0, -262138, 131072, 1, -196602, 131072, 2, -131066, 131072, 3, -327673, 0, 0, -262137, 0, 1, -196601, 0, 2, -131065, 0, 0, -327672, 65536, 0, -262136, 65536, 1, -196600, 65536, 2, -131064, 65536, 0, -327671, 131072, 0, -262135, 131072, 1, -196599, 131072, 2, -131063, 131072, 0, -327670, 196608, 0, -262134, 196608, 1, -196598, 196608, 2, -131062, 196608, 0, 655369, 131072, 0, 720905, 131072, 1, 786441, 131072, 2, 851977, 131072, 3, 655370, 196608, 0, 720906, 196608, 1, 786442, 196608, 2, 851978, 196608, 3, 393223, 0, 0, 458759, 0, 1, 524295, 0, 2, 589831, 0, 3, 393224, 65536, 0, 458760, 65536, 1, 524296, 65536, 2, 589832, 65536, 3, 393225, 131072, 0, 458761, 131072, 1, 524297, 131072, 2, 589833, 131072, 3, 393226, 196608, 0, 458762, 196608, 1, 524298, 196608, 2, 589834, 196608, 3, 131079, 0, 0, 196615, 0, 1, 262151, 0, 2, 327687, 0, 3, 131080, 65536, 0, 196616, 65536, 1, 262152, 65536, 2, 327688, 65536, 3, 131081, 131072, 0, 196617, 131072, 1, 262153, 131072, 2, 327689, 131072, 3, 131082, 196608, 0, 196618, 196608, 1, 262154, 196608, 2, 327690, 196608, 3, -65529, 0, 1, 7, 0, 2, 65543, 0, 3, -65528, 65536, 1, 8, 65536, 2, 65544, 65536, 3, -65527, 131072, 1, 9, 131072, 2, 65545, 131072, 3, -65526, 196608, 1, 10, 196608, 2, 65546, 196608, 3, -65530, 131072, 1, -65531, 458753, 4, -65532, 458753, 4, -65533, 458753, 4, -65534, 458753, 4, -65535, 458753, 4, -65536, 458753, 4, -1, 458753, 4, 655354, 131072, 3, -5, 327681, 2, 65531, 327681, 2, 131067, 327681, 2, 6, 131072, 1, 65542, 131072, 1, 131078, 131072, 1, 196614, 131072, 1, 262150, 131072, 1, 327686, 131072, 1, 393222, 131072, 1, 458758, 131072, 1, 524294, 131072, 1, 589830, 131072, 1)

[node name="button_5_1" parent="Node_5" instance=ExtResource("3_cadbo")]
visible = false
position = Vector2(-48, 48)

[node name="button_5_2" parent="Node_5" instance=ExtResource("3_cadbo")]
visible = false
position = Vector2(-48, 32)

[node name="Node_4" type="Node2D" parent="."]

[node name="Sprite2D" type="Sprite2D" parent="Node_4"]
position = Vector2(64, 112)
scale = Vector2(0.04, 0.04)
texture = ExtResource("10_4iwyx")
centered = false

[node name="Cleito" parent="Node_4" instance=ExtResource("1_608d1")]
position = Vector2(16, 112)

[node name="button_4_2" parent="Node_4" instance=ExtResource("3_cadbo")]
position = Vector2(-48, 0)

[node name="button_4" parent="Node_4" instance=ExtResource("3_cadbo")]
position = Vector2(-32, 0)

[node name="mist_4" type="TileMap" parent="Node_4"]
tile_set = SubResource("TileSet_peh2v")
format = 2
layer_0/tile_data = PackedInt32Array(589819, 0, 2, 655355, 0, 2, 589829, 0, 2, 589830, 0, 2, 589831, 0, 2, 589832, 0, 2, 524296, 0, 2, 458760, 0, 2, 393224, 0, 2, 327688, 0, 2, 262152, 0, 2, 196616, 0, 2, 131080, 0, 2, 65544, 0, 2, 8, 0, 2, -65528, 0, 2, -131064, 0, 2, -196600, 0, 2, -262136, 0, 2, -262137, 0, 2, -262138, 0, 2, -262139, 0, 2, -262140, 0, 2, -262141, 0, 2, -262142, 0, 2, -262143, 0, 2, -262144, 0, 2, -196609, 0, 2, -196610, 0, 2, -196611, 0, 2, -196612, 0, 2, -196613, 0, 2, -131077, 0, 2, -65541, 0, 2, -5, 0, 2, 65531, 0, 2, 131067, 0, 2, 196603, 0, 2, 262139, 0, 2, 327675, 0, 2, 393211, 0, 2, 458747, 0, 2, 524283, 0, 2, -3, 0, 2, -2, 0, 2, -1, 0, 2, -65536, 0, 2, -65535, 0, 2, -65534, 0, 2, -65533, 0, 2, -65532, 0, 2, -65531, 0, 2, -65530, 0, 2, -65529, 0, 2, -131065, 0, 2, -131066, 0, 2, -131067, 0, 2, -131068, 0, 2, -131069, 0, 2, -131070, 0, 2, -131071, 0, 2, -131072, 0, 2, -65537, 0, 2, -65538, 0, 2, -65539, 0, 2, -65540, 0, 2, -131076, 0, 2, -131075, 0, 2, -131074, 0, 2, -131073, 0, 2, -196608, 0, 2, -196607, 0, 2, -196606, 0, 2, -196605, 0, 2, -196604, 0, 2, -196603, 0, 2, -196602, 0, 2, -196601, 0, 2, -4, 0, 2, 393221, 65536, 3, 458757, 65536, 2, 524293, 65536, 3, 327685, 65536, 2, 196613, 65536, 2, 262149, 65536, 3, 65541, 0, 3, 131077, 65536, 3, 65542, 0, 3, 131078, 0, 2, 65543, 65536, 3, 131079, 65536, 2, 5, 0, 2, 6, 0, 2, 7, 65536, 2, 196614, 0, 3, 196615, 65536, 3, 262150, 0, 2, 327686, 0, 3, 262151, 65536, 2, 327687, 65536, 3, 393222, 0, 2, 458758, 0, 2, 393223, 65536, 2, 458759, 65536, 2, 524294, 0, 3, 524295, 65536, 3, 720891, 0, 2, 720892, 0, 2, 720893, 0, 2, 720894, 0, 2, 720895, 0, 2, 655360, 0, 2, 655361, 0, 2, 655362, 0, 2, 655363, 0, 2, 655364, 0, 2, 655365, 0, 2, 655366, 0, 2, 655367, 0, 2, 655368, 0, 2)

[node name="Node_3" type="Node2D" parent="."]

[node name="button_3" parent="Node_3" instance=ExtResource("3_cadbo")]
position = Vector2(-32, 16)

[node name="mist_3" parent="Node_3" instance=ExtResource("7_8ph0u")]
layer_0/tile_data = PackedInt32Array(196604, 0, 0, 262140, 0, 1, 327676, 0, 2, 393212, 0, 3, -65540, 0, 0, -4, 0, 0, 65532, 0, 1, 131068, 0, 3, -65539, 65536, 0, -65538, 131072, 0, -65537, 196608, 0, 458748, 0, 0, 524284, 0, 1, 589820, 0, 2, 589821, 65536, 2, 589822, 131072, 2, 589823, 196608, 2, 524288, 0, 3, 524289, 65536, 3, 524290, 131072, 3, 524291, 196608, 3, 393220, 0, 1, 458756, 0, 2, 524292, 0, 3, 327685, 65536, 0, 458757, 65536, 2, 524293, 65536, 3, 327686, 131072, 0, 458758, 131072, 2, 524294, 131072, 3, 327687, 196608, 0, 393223, 196608, 1, 458759, 196608, 2, 524295, 196608, 3, 65541, 65536, 0, 131077, 65536, 1, 196613, 65536, 2, 262149, 65536, 3, 65542, 131072, 0, 131078, 131072, 1, 196614, 131072, 2, 262150, 131072, 3, 65543, 196608, 0, 131079, 196608, 1, 196615, 196608, 2, 262151, 196608, 3, -196608, 0, 0, -131072, 0, 1, -196607, 65536, 0, -131071, 65536, 1, -196606, 131072, 0, -131070, 131072, 1, -196605, 196608, 0, -131069, 196608, 1, -196604, 0, 0, -131068, 0, 1, -196603, 65536, 0, -131067, 65536, 1, -65531, 65536, 2, 5, 65536, 3, -196602, 131072, 0, -131066, 131072, 1, -65530, 131072, 2, 6, 131072, 3, -196601, 196608, 0, -131065, 196608, 1, -65529, 196608, 2, 7, 196608, 3, -131076, 0, 0, -131075, 65536, 0, -131074, 131072, 0, -131073, 196608, 0, 131076, 196608, 3, 196612, 196608, 1, 262148, 196608, 2, 327684, 196608, 3, -65532, 196608, 0, 4, 196608, 1, 65540, 196608, 2, 393221, 196608, 0, 393222, 196608, 0, -3, 65536, 0, 65533, 65536, 1, -2, 131072, 0, 65534, 131072, 1, -1, 196608, 0, 65535, 196608, 1, -65536, 0, 0, 0, 0, 1, -65535, 65536, 0, 1, 65536, 1, -65534, 131072, 0, 2, 131072, 1, -65533, 196608, 0, 3, 196608, 1)

[node name="Node_2" type="Node2D" parent="."]

[node name="Cleito" parent="Node_2" instance=ExtResource("1_608d1")]
position = Vector2(-16, 32)

[node name="button_2" parent="Node_2" instance=ExtResource("3_cadbo")]
position = Vector2(0, 80)

[node name="mist_2" parent="Node_2" instance=ExtResource("7_8ph0u")]
layer_0/tile_data = PackedInt32Array(196604, 65536, 0, 262140, 65536, 1, 327676, 65536, 2, 393212, 65536, 3, 196605, 131072, 0, 262141, 131072, 1, 327677, 131072, 2, 393213, 131072, 3, 196606, 196608, 0, 262142, 196608, 1, 327678, 196608, 2, 393214, 196608, 3, 458748, 65536, 0, 524284, 65536, 1, 589820, 65536, 2, 458749, 131072, 0, 524285, 131072, 1, 589821, 131072, 2, 458750, 196608, 0, 524286, 196608, 1, 589822, 196608, 2, 458751, 0, 0, 524287, 0, 1, 589823, 0, 2, 393216, 65536, 0, 458752, 65536, 1, 524288, 65536, 2, 393217, 131072, 0, 458753, 131072, 1, 524289, 131072, 2, 393218, 196608, 0, 458754, 196608, 1, 524290, 196608, 2, 65540, 0, 0, 131076, 0, 1, 196612, 0, 2, 262148, 0, 3, 65541, 65536, 0, 131077, 65536, 1, 196613, 65536, 2, 262149, 65536, 3, 65542, 131072, 0, 131078, 131072, 1, 196614, 131072, 2, 262150, 131072, 3, 393219, 0, 0, 458755, 0, 1, 524291, 0, 2, 393220, 65536, 0, 458756, 65536, 1, 524292, 65536, 2, 393221, 131072, 0, 458757, 131072, 1, 524293, 131072, 2, 393222, 196608, 0, 458758, 196608, 1, 524294, 196608, 2, 327684, 65536, 3, 327685, 131072, 3, 327686, 196608, 3, -131068, 0, 1, -65532, 0, 2, 4, 0, 3, -131067, 65536, 1, -65531, 65536, 2, 5, 65536, 3, -131066, 131072, 1, -65530, 131072, 2, 6, 131072, 3, -131072, 0, 1, -65536, 0, 2, 0, 0, 3, -131071, 65536, 1, -65535, 65536, 2, 1, 65536, 3, -131070, 131072, 1, -65534, 131072, 2, 2, 131072, 3, -131069, 196608, 1, -65533, 196608, 2, 3, 196608, 3, -65540, 0, 1, -4, 0, 2, 65532, 0, 3, -65539, 65536, 1, -3, 65536, 2, 65533, 65536, 3, -65538, 131072, 1, -2, 131072, 2, 65534, 131072, 3, -65537, 196608, 1, -1, 196608, 2, 65535, 196608, 3, 131068, 65536, 3, 131069, 131072, 3, 131070, 196608, 3)

[node name="Node_1" type="Node2D" parent="."]

[node name="Cleito" parent="Node_1" instance=ExtResource("1_608d1")]
position = Vector2(16, 32)

[node name="button_1" parent="Node_1" instance=ExtResource("3_cadbo")]
position = Vector2(64, 16)

[node name="mist_1" type="TileMap" parent="Node_1"]
tile_set = SubResource("TileSet_fcx8a")
format = 2
layer_0/tile_data = PackedInt32Array(393215, 1, 3, 327680, 1, 3, 327681, 65537, 3, 327682, 131073, 3, 327683, 196609, 3, 131071, 1, 0, 196607, 1, 1, 262143, 1, 2, 327679, 1, 3)

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(32, 64)
zoom = Vector2(10, 6)
position_smoothing_enabled = true
drag_horizontal_enabled = true
drag_vertical_enabled = true

[node name="Undo" parent="." instance=ExtResource("2_5ink7")]
position = Vector2(16, 32)
